--- a/aerospace.html
+++ b/aerospace.html
@@ -8,25 +8,31 @@
     <title> Aerospace Engineering </title>
 </head>
 <body>
-    <nav class="navbar backgroundd"> 
-        <ul class="nav-list">
+    <nav class="navbar backgroundd h-nav-resp"> 
+        <ul class="nav-list  v-class-resp">
             <div class="logo"><img src="Images/grp11.png" alt="logo"> </div>
             <li> <a href="index.html"> Home  </a> </li>
             <li> <a href="second.html"> Sign In </a> </li>
             <li> <a href="about.html"> About us </a> </li>
-            <li> <a href="#Contact Us"> Contact Us </a> </li> 
+            <li> <a href="index.html#Contact%20Us"> Contact Us </a> </li> 
         </ul>
-        <div class="rightNav">
+        <div class="rightNav  v-class-resp">
             <input type="text" name="search" id="search">
             <button class="btn btn-sm"> Search </button>
-        </div>
-    </nav>
-
+       </div>
+            <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            </div>
+        
+    </nav>  
 
     <div class="topSection">
+        
         <p class="topText" style="text-align:center"> Aerospace Engineering </p>
          <div class="secPart">
-            <div class="transBox transImg">
+            <div class="transBox">
                 <p> Aerospace Engineering : Interactive Aerospace Engineering and Design, Dava Newman 
                     Massachusetts Institute of Technology Published by McGraw-Hill, a business unit of
                      The McGraw-Hill Companies, Inc., 1221 Avenue of the Americas, New York, NY 10020. </p>
@@ -39,7 +45,7 @@
 
 
         <div class="secPart">
-            <div class="transBox transImg">
+            <div class="transBox">
                 <p> Aerospace Engineering : Interactive Aerospace Engineering and Design, Dava Newman 
                     Massachusetts Institute of Technology Published by McGraw-Hill, a business unit of
                      The McGraw-Hill Companies, Inc., 1221 Avenue of the Americas, New York, NY 10020.</p>
@@ -51,7 +57,7 @@
 
 
         <div class="secPart">
-            <div class="transBox transImg">
+            <div class="transBox">
                 <p> Aerospace Engineering : Interactive Aerospace Engineering and Design, Dava Newman 
                     Massachusetts Institute of Technology Published by McGraw-Hill, a business unit of
                      The McGraw-Hill Companies, Inc., 1221 Avenue of the Americas, New York, NY 10020.</p>
@@ -63,7 +69,20 @@
 
 
         <div class="secPart">
-            <div class="transBox transImg">
+            <div class="transBox">
+                <p> Aerospace Engineering : Interactive Aerospace Engineering and Design, Dava Newman 
+                    Massachusetts Institute of Technology Published by McGraw-Hill, a business unit of
+                     The McGraw-Hill Companies, Inc., 1221 Avenue of the Americas, New York, NY 10020.</p>
+            </div>
+            <div class="download"> <a href="https://drive.google.com/uc?export=download&id=1EkSJEEl7lphHwHMIRZARyBl7ea059RMP"> 
+                <img src="Images/down2.jpg" alt="logo" width="5%"> </a> 
+            </div>
+        </div> <br>
+
+
+
+        <div class="secPart">
+            <div class="transBox">
                 <p> Aerospace Engineering : Interactive Aerospace Engineering and Design, Dava Newman 
                     Massachusetts Institute of Technology Published by McGraw-Hill, a business unit of
                      The McGraw-Hill Companies, Inc., 1221 Avenue of the Americas, New York, NY 10020.</p>
@@ -74,5 +93,14 @@
         </div> <br>
 
     </div>
+
+    <footer>
+        <p class="text-footer backgroundd">
+        Copyright &copy; 2027 PBL_Group_11 - All right reserved
+        </p>
+    </footer>
+
+    <script src="/resp.js"></script>
+
 </body>
 </html>
