--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <title> Educational Website </title>
 </head>
 <body>
-    <nav class="navbar backgroundd"> 
-        <ul class="nav-list">
+    <nav class="navbar backgroundd h-nav-resp"> 
+        <ul class="nav-list  v-class-resp">
             <div class="logo"><img src="Images/grp11.png" alt="logo"> </div>
             <li> <a href="index.html"> Home  </a> </li>
             <li> <a href="second.html"> Sign In </a> </li>
             <li> <a href="about.html"> About us </a> </li>
             <li> <a href="#Contact Us"> Contact Us </a> </li> 
         </ul>
-        <div class="rightNav">
+        <div class="rightNav  v-class-resp">
             <input type="text" name="search" id="search">
             <button class="btn btn-sm"> Search </button>
-        </div>
-    </nav>
+       </div>
+            <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            </div>
+        
+    </nav>  
+
+
+
     
 <div class="bg">
 
@@ -51,7 +60,7 @@
          </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Aerospace.jpg" width="80%" alt="" class="imgFluid">
+            <img src="Images/Aerospace.jpg" width="80%" class="imgFluid">
         </div>
     </section>
 </ul> </a>
@@ -65,7 +74,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Automobile.jpg" width="85%" alt="" class="imgFluid">
+            <img src="Images/Automobile.jpg" width="85%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -80,7 +89,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Chemical.jpg" width="95%" alt="" class="imgFluid">
+            <img src="Images/Chemical.jpg" width="95%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -94,7 +103,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Civil.jpeg" width="69%" alt="" class="imgFluid">
+            <img src="Images/Civil.jpeg" width="69%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -108,7 +117,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Computer.jpg" width="70%" alt="" class="imgFluid">
+            <img src="Images/Computer.jpg" width="70%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -122,7 +131,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Electrical.jpg" width="90%" alt="" class="imgFluid">
+            <img src="Images/Electrical.jpg" width="90%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -136,7 +145,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Electronic.jpg" width="65%" alt="" class="imgFluid">
+            <img src="Images/Electronic.jpg" width="65%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -151,7 +160,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Mechanical.jpg" width="105%" alt="" class="imgFluid">
+            <img src="Images/Mechanical.jpg" width="105%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -166,7 +175,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Petroleum.jpg" width="90%" alt="" class="imgFluid">
+            <img src="Images/Petroleum.jpg" width="90%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -183,7 +192,7 @@
             </p>
         </div>
         <div class="thumbnail">
-            <img src="Images/Telecommunication.jpg" width="75%" alt="" class="imgFluid">
+            <img src="Images/Telecommunication.jpg" width="75%" class="imgFluid">
         </div>
     </section>
     </div>
@@ -207,7 +216,10 @@
         Copyright &copy; 2027 PBL_Group_11 - All right reserved
         </p>
     </footer>
-
 </div>
+
+<script src="/resp.js"></script>
+
+
 </body> 
 </html>
