--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 </footer>
 
 
-<script src=".../resp.js"></script>
+<script src="https://swarnimmk.github.io/PBLwebsite.github.io/resp.js"></script>
 
 </body>
 </html>
