--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </footer>
 </div>
 
-<script src="resp.js"></script>
+<script src="https://swarnimmk.github.io/PBLwebsite.github.io/resp.js"></script>
 
 
 </body> 
