--- a/second.html
+++ b/second.html
@@ -84,7 +84,7 @@
   </p>
 </footer>
 
-        <script src="/resp.js"></script>
+        <script src="https://swarnimmk.github.io/PBLwebsite.github.io/resp.js"></script>
 
 </body>
 </html>
