--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
            
-            <div class="secondHalf"> <img src="Images/grp11.png" alt="bg image" width="100%"> </div>
+            <div class="secondHalf"> <img src="Images/circular image.png" alt="bg image" width="100%"> </div>
         </div>
     </div>
      
@@ -213,7 +213,7 @@
 
      <footer>
         <p class="text-footer backgroundd">
-        Copyright &copy; 2027 PBL_Group_11 - All right reserved
+        Copyright &copy; 2027 SwarnimKoteshwar - All right reserved
         </p>
     </footer>
 </div>
