--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar backgroundd h-nav-resp"> 
         <ul class="nav-list  v-class-resp">
-            <div class="logo"><img src="Images/grp11.png" alt="logo"> </div>
+            <div class="logo"><img src="Images/circular logo.jpeg" alt="logo"> </div>
             <li> <a href="index.html"> Home  </a> </li>
             <li> <a href="second.html"> Sign In </a> </li>
             <li> <a href="about.html"> About us </a> </li>
@@ -42,53 +42,21 @@
         <div class="thumbnail"> <img src="Images/swarnim.jpg" width="70%" alt="Photo" class="imgFluid"> </div>
     </section>
 
-    <section class="secLeft about2">
-        <div class="para">
-        <p class="sectionTag text-big"> Mansi Upari </p>
-        <p class="sectionSubTag"> I'm Mansi Upari, a lazy perfectionist, who sees the 
-            world through rose colored glasses. I have a lot of hobbies and get bored 
-            easily so I  try new things every now & then, but my favorite hobby is 
-            probably the next one. I'm really scared of animals, insects and basically 
-            every being on this plant other than babies
-            </p> </div>
-        <div class="thumbnail"> <img src="Images/mansi.jpg" width="110%" alt="Photo" class="imgFluid"> </div>
-    </section>
-
-    <section class="secRight about3">
-        <div class="para">
-        <p class="sectionTag text-big"> Shruti Londhe </p>
-        <p class="sectionSubTag"> I am Shruti! I'm a student who is trying to learn coding!
-            I am currently pursuing CSE. Apart from these I sometimes write blogs about 
-            random stuff and even poems. Also, I love music
-            </p>  </div>
-        <div class="thumbnail"><img src="Images/shruti.jpg" width="70%" alt="Photo" class="imgFluid"></div>
-    </section>
-
-    <section class="secLeft about4">
-        <div class="para">
-        <p class="sectionTag text-big"> Soham Sawant </p>
-        <p class="sectionSubTag"> I'm Soham! I'm in Sinhgad Academy Of Engineering, 
-            Kondhwa pursuing my B.Tech degree in Computer Engineering. I am passionate 
-            about coding
-            </p> </div>
-        <div class="thumbnail"><img src="Images/soham.jpg" width="50%" alt="Photo" class="imgFluid"></div>
-    </section>
-
-    <section class="secRight about5">
-        <div class="para">
-        <p class="sectionTag text-big"> Suraj Dalavi </p>
-        <p class="sectionSubTag"> I'm Suraj Dalavi, a free-minded person. I'm in SAOE, Kondhwa pursuing
-            my B.Tech degree in Computer Engineering. I enjoy playing sports, basketball is my favorite. 
-            I'm an Army brat. I want to serve my country and i will enjoy doing that. Recently I'm
-            working on my coding
-            </p></div>
-        <div class="thumbnail"> <img src="Images/suraj.jpg" width="100%" alt="Photo" class="imgFluid"> </div>
-        </section>
+   
+<section class="secLeft about2">
+    <div class="para">
+    <p class="sectionTag text-big"> Orlando </p>
+    <p class="sectionSubTag">Orlando is derived from Italian origin meaning "famous throughout the land".
+        The hands in the icon denotes "good deeds" and the name denotes "fame". It means we,
+         team Orlando, want to be famous for good deeds. This website is first of Orlando's work. </div>
+        </p> </div>
+    <div class="thumbnail logo2"> <img src="Images/square logo.jpeg" width="110%" alt="Photo" class="imgFluid"> </div>
+</section>
 </section>
 
 <footer>
     <p class="text-footer backgroundd">
-    Copyright &copy; 2027 PBL_Group_11 - All right reserved
+    Copyright &copy; 2027 Swarnim_Koteshwar - All right reserved
     </p>
 </footer>
 
