--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
   
   <nav class="navbar backgroundd h-nav-resp"> 
     <ul class="nav-list  v-class-resp">
-        <div class="logo"><img src="Images/grp11.png" alt="logo"> </div>
+        <div class="logo"><img src="Images/circular image.png" alt="logo"> </div>
         <li> <a href="index.html"> Home  </a> </li>
         <li> <a href="second.html"> Sign In </a> </li>
         <li> <a href="about.html"> About us </a> </li>
@@ -80,7 +80,7 @@
 
 <footer>
   <p class="text-footer backgroundd">
-  Copyright &copy; 2027 PBL_Group_11 - All right reserved
+  Copyright &copy; 2027 SwarnimKoteshwar - All right reserved
   </p>
 </footer>
 
