--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
 <footer>
     <p class="text-footer backgroundd">
-    Copyright &copy; 2027 Swarnim_Koteshwar - All right reserved
+    Copyright &copy; 2027 SwarnimKoteshwar - All right reserved
     </p>
 </footer>
 
