--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar backgroundd h-nav-resp"> 
         <ul class="nav-list  v-class-resp">
-            <div class="logo"><img src="Images/circular image.png" alt="logo"> </div>
+            <div class="logo"><img src="Images/circular logo.png" alt="logo"> </div>
             <li> <a href="index.html"> Home  </a> </li>
             <li> <a href="second.html"> Sign In </a> </li>
             <li> <a href="about.html"> About us </a> </li>
