--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
   
   <nav class="navbar backgroundd h-nav-resp"> 
     <ul class="nav-list  v-class-resp">
-        <div class="logo"><img src="Images/circular logo.png" alt="logo"> </div>
+        <div class="logo"><img src="Images/circular logo.jpeg" alt="logo"> </div>
         <li> <a href="index.html"> Home  </a> </li>
         <li> <a href="second.html"> Sign In </a> </li>
         <li> <a href="about.html"> About us </a> </li>
