--- a/aerospace.html
+++ b/aerospace.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar backgroundd h-nav-resp"> 
         <ul class="nav-list  v-class-resp">
-             <div class="logo"><img src="Images/circular logo.jpeg" alt="logo"> </div>
+            <div class="logo"><img src="Images/circular logo.jpeg" alt="logo"> </div>
             <li> <a href="index.html"> Home  </a> </li>
             <li> <a href="second.html"> Sign In </a> </li>
             <li> <a href="about.html"> About us </a> </li>
@@ -96,7 +96,7 @@
 
     <footer>
         <p class="text-footer backgroundd">
-        Copyright &copy; 2027 PBL_Group_11 - All right reserved
+        Copyright &copy; 2027 SwarnimKoteshwar - All right reserved
         </p>
     </footer>
 
