--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
            
-            <div class="secondHalf"> <img src="Images/circular image.png" alt="bg image" width="100%"> </div>
+            <div class="secondHalf"> <img src="Images/circular logo.jpeg" alt="bg image" width="100%"> </div>
         </div>
     </div>
      
